--- a/app/src/main/res/layout/fragment_pelis.xml
+++ b/app/src/main/res/layout/fragment_pelis.xml
@@ -13,5 +13,5 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lv" />
+        android:id="@+id/lvPelis" />
 </RelativeLayout>
