--- a/app/src/main/res/menu/menu_fragment_pelis.xml
+++ b/app/src/main/res/menu/menu_fragment_pelis.xml
@@ -1,6 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/menuRefresh" android:title="Refresh"
+    <item android:id="@+id/menuPopular" android:title="Popular"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/menuRated" android:title="Most Rated"
+        android:orderInCategory="100" app:showAsAction="never"/>
 </menu>
